--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "myapp",
+  "name": "yigetooth",
   "description": "Boilerplate web app using node, express, mongodb, backbone, marionette.  Tooling includes Grunt, Bower, Browserify, etc.",
   "version": "0.0.1",
-  "author": "Jason Krol",
+  "author": "Morris Lee, based on Jason Krol",
   "repository": {
     "type": "git",
     "url": "https://github.com/jkat98/benm.git"
@@ -11,25 +11,32 @@
     "node": "0.10.x"
   },
   "scripts": {
-    "start": "node server/server.js",
+    "start": "node server.js",
     "test": "grunt test"
   },
   "dependencies": {
-    "express": "~4.13.3",
-    "mongoose": "~4.1.11",
-    "handlebars-runtime": "~1.0.12",
-    "express-handlebars": "~2.0.1",
+    "body-parser": "^1.14.1",
+    "cookie-parser": "^1.4.0",
     "debug": "~2.2.0",
-    "md5": ">=2.0.0"
+    "errorhandler": "^1.4.2",
+    "express": "~4.13.3",
+    "express-handlebars": "~2.0.1",
+    "express-winston": "^0.4.1",
+    "handlebars-runtime": "~1.0.12",
+    "md5": ">=2.0.0",
+    "method-override": "^2.3.5",
+    "mongoose": "~4.1.11",
+    "morgan": "^1.6.1",
+    "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
     "bower": "~1.6.3",
     "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-contrib-uglify": "~0.2.7",
+    "grunt-contrib-concat": "~0.5.1",
+    "grunt-contrib-jshint": "~0.11.3",
+    "grunt-contrib-uglify": "~0.9.2",
     "grunt-bower-task": "~0.4.0",
-    "grunt-nodemon": "~0.1.2",
+    "grunt-nodemon": "~0.4.0",
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.1",
     "karma-html2js-preprocessor": "~0.1.0",
