--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "method-override": "^2.3.5",
     "mongoose": "~4.1.11",
     "morgan": "^1.6.1",
+    "request": "^2.67.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
